--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <a href="colorchange.html">Color Changer Page</a>
       </ul>
     </nav>
   </header>
