--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Me - Joanah Loraine</title>
-  <link rel="stylesheet" href="index.css"> <!-- main site styles -->
-  <link rel="stylesheet" href="about.css"> <!-- about-specific styles -->
+  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="about.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -19,6 +19,7 @@
         <li><a href="#skills">Skills</a></li>
         <li><a href="#portfolio">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
+        <li><a href="colorchange.html">Color Changer</a></li>
       </ul>
     </nav>
   </header>
@@ -27,12 +28,12 @@
   <section id="about" class="about">
     <div class="about-container">
       <!-- Profile Picture -->
-      <div class="about-photo">
+      <div class="about-photo animate-on-scroll">
         <img src="about-photo.png" alt="Joanah Photo">
       </div>
 
-      <!-- About Text (stays beside photo) -->
-      <div class="about-text">
+      <!-- About Text -->
+      <div class="about-text animate-on-scroll">
         <h3>About Me</h3>
         <h2>Who is <span>Joanah?</span></h2>
         <p>
@@ -42,8 +43,8 @@
         </p>
       </div>
 
-      <!-- Education (flows under photo) -->
-      <div class="about-education">
+      <!-- Education Section (Below) -->
+      <div class="about-education animate-on-scroll">
         <h3><i class="fas fa-graduation-cap"></i> Education</h3>
         <ul>
           <li><strong>Elementary:</strong> Ibo Elementary School (2012-2018, With Honors)</li>
@@ -51,7 +52,6 @@
           <li><strong>Senior High:</strong> Asian Learning Center Inc. (2022-2024, With Honors)</li>
           <li><strong>College:</strong> Cebu Technological University - Bachelor of Science in Information Technology</li>
         </ul>
-        <!-- Resume Button -->
         <a href="Mante RESUME (1) (2).pdf" class="btn" target="_blank">
           <i class="fas fa-file-pdf"></i> View My Resume
         </a>
@@ -96,5 +96,37 @@
   <footer>
     <p>© 2025 Joanah Loraine S. Mante | All Rights Reserved</p>
   </footer>
+
+  <!-- JS for scroll animation -->
+  <script>
+    const scrollElements = document.querySelectorAll(".animate-on-scroll");
+
+    const elementInView = (el, dividend = 1) => {
+      const elementTop = el.getBoundingClientRect().top;
+      return elementTop <= (window.innerHeight || document.documentElement.clientHeight) / dividend;
+    };
+
+    const displayScrollElement = (element) => {
+      element.classList.add("scrolled");
+    };
+
+    const hideScrollElement = (element) => {
+      element.classList.remove("scrolled");
+    };
+
+    const handleScrollAnimation = () => {
+      scrollElements.forEach((el) => {
+        if (elementInView(el, 1.25)) {
+          displayScrollElement(el);
+        } else {
+          hideScrollElement(el);
+        }
+      })
+    }
+
+    window.addEventListener("scroll", () => {
+      handleScrollAnimation();
+    });
+  </script>
 </body>
 </html>
