--- a/about.html
+++ b/about.html
@@ -230,10 +230,7 @@
       <h3>About Me</h3>
       <h2>Who is <span>Joanah?</span></h2>
       <p>
-        I'm Joanah Loraine S. Mante, a passionate learner and aspiring developer
-        who enjoys exploring the world of technology and creativity. I believe
-        in continuous growth and turning ideas into meaningful projects.
-      </p>
+        a passionate learner and aspiring developer with a strong interest in technology and innovation. I am dedicated to continuous learning and professional growth, always striving to transform ideas into purposeful and impactful projects. With a deep appreciation for creativity and problem-solving, I aim to contribute to the development of solutions that enhance efficiency, promote progress, and make a positive difference in people's lives.
     </div>
     <div class="about-education">
       <h3><i class="fas fa-graduation-cap"></i> Education</h3>
