--- a/index.html
+++ b/index.html
@@ -6,6 +6,203 @@
   <title>Joanah Loraine - Portfolio</title>
   <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <style>
+    /* About Section */
+    .about {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 40px;
+      padding: 100px 60px;
+      background: #f8e1ff;
+      border-radius: 20px;
+      margin: 120px auto;
+      width: 85%;
+      max-width: 1000px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      align-items: flex-start;
+    }
+
+    .about-photo {
+      flex: 0 0 320px;
+    }
+
+    .about-photo img {
+      width: 320px;
+      height: 320px;
+      border-radius: 15px;
+      object-fit: cover;
+      box-shadow: 0 8px 20px rgba(123,44,191,0.2);
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+
+    .about-photo img:hover {
+      transform: scale(1.05);
+      box-shadow: 0 12px 25px rgba(123,44,191,0.3);
+    }
+
+    .about-text {
+      flex: 1 1 500px;
+      min-width: 300px;
+    }
+
+    .about-text h3 {
+      font-size: 1rem;
+      color: #7b2cbf;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      margin-bottom: 10px;
+    }
+
+    .about-text h2 {
+      font-size: 2.2rem;
+      color: #4a1760;
+      margin-bottom: 20px;
+      font-family: Georgia, serif;
+    }
+
+    .about-text h2 span {
+      color: #7b2cbf;
+    }
+
+    .about-text p {
+      font-size: 1.1rem;
+      color: #4a1760;
+      line-height: 1.8;
+      max-width: 600px;
+    }
+
+    /* Education Section */
+    .about-education {
+      flex-basis: 100%;
+      margin-top: 40px;
+    }
+
+    .about-education h3 {
+      font-size: 1.3rem;
+      color: #7b2cbf;
+      margin-bottom: 15px;
+      font-family: Georgia, serif;
+    }
+
+    .about-education ul {
+      list-style: none;
+      padding: 0;
+    }
+
+    .about-education li {
+      margin-bottom: 8px;
+      font-size: 1rem;
+      color: #4a1760;
+      padding-left: 20px;
+      position: relative;
+    }
+
+    .about-education li::before {
+      content: "•";
+      color: #7b2cbf;
+      font-size: 1.2rem;
+      position: absolute;
+      left: 0;
+    }
+
+    .about-education strong {
+      color: #5a189a;
+    }
+
+    /* Resume Button */
+    .btn {
+      display: inline-block;
+      padding: 12px 25px;
+      background: #c77dff;
+      color: white;
+      border-radius: 25px;
+      text-decoration: none;
+      margin-top: 15px;
+      font-weight: bold;
+      transition: all 0.3s ease;
+    }
+
+    .btn:hover {
+      background: #a855f7;
+      transform: scale(1.05);
+      box-shadow: 0 0 15px #a855f7aa;
+    }
+
+    /* Skills (Favorite Tools) Section */
+    .skills {
+      padding: 80px 60px;
+      background: #fff;
+      text-align: center;
+      border-radius: 20px;
+      margin: 40px auto;
+      width: 85%;
+      max-width: 1000px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+    }
+
+    .skills h3 {
+      font-size: 1rem;
+      color: #7b2cbf;
+      margin-bottom: 10px;
+      letter-spacing: 1px;
+    }
+
+    .skills h2 {
+      font-size: 2.2rem;
+      color: #4a1760;
+      margin-bottom: 40px;
+      font-family: Georgia, serif;
+    }
+
+    .skills h2 span {
+      color: #7b2cbf;
+    }
+
+    .skills-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+      gap: 30px;
+      justify-items: center;
+      align-items: center;
+    }
+
+    .skill-item {
+      background: #f3e7ff;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 5px 15px rgba(123,44,191,0.15);
+      transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+      cursor: pointer;
+    }
+
+    .skill-item:hover {
+      transform: translateY(-8px) scale(1.05);
+      box-shadow: 0 10px 25px rgba(123,44,191,0.3);
+      background: #e9d3ff;
+    }
+
+    .skill-item img {
+      width: 65px;
+      margin-bottom: 12px;
+      transition: transform 0.3s ease;
+    }
+
+    .skill-item:hover img {
+      transform: rotate(5deg) scale(1.1);
+    }
+
+    .skill-item p {
+      font-size: 1rem;
+      font-weight: 500;
+      color: #4a1760;
+    }
+
+    @media (max-width: 900px) {
+      .about { flex-direction: column; align-items: center; text-align: center; }
+      .about-photo { margin-bottom: 20px; }
+    }
+  </style>
 </head>
 <body>
   <!-- Navigation -->
@@ -48,9 +245,74 @@
     </div>
   </section>
 
+  <!-- About Me Section -->
+  <section class="about">
+    <div class="about-photo">
+      <img src="about-photo.png" alt="Joanah Photo">
+    </div>
+    <div class="about-text">
+      <h3>About Me</h3>
+      <h2>Who is <span>Joanah?</span></h2>
+      <p>
+        a passionate learner and aspiring developer with a strong interest in technology and innovation. I am dedicated to continuous learning and professional growth, always striving to transform ideas into purposeful and impactful projects. With a deep appreciation for creativity and problem-solving, I aim to contribute to the development of solutions that enhance efficiency, promote progress, and make a positive difference in people's lives.
+      </p>
+    </div>
+    <div class="about-education">
+      <h3><i class="fas fa-graduation-cap"></i> Education</h3>
+      <ul>
+        <li><strong>Elementary:</strong> Ibo Elementary School (2012-2018, With Honors)</li>
+        <li><strong>Junior High:</strong> Mactan Airbase National High School (2018-2022, With Honors)</li>
+        <li><strong>Senior High:</strong> Asian Learning Center Inc. (2022-2024, With Honors)</li>
+        <li><strong>College:</strong> Cebu Technological University - BSIT</li>
+      </ul>
+      <a href="Mante RESUME (1) (2).pdf" class="btn" target="_blank"><i class="fas fa-file-pdf"></i> View Resume</a>
+    </div>
+  </section>
+
+  <!-- My Favorite Tools Section -->
+  <section id="skills" class="skills">
+    <h3>~ My Favorite Tools</h3>
+    <h2>Exploring the Tools<br><span>Behind My Work</span></h2>
+    <div class="skills-grid">
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java">
+        <p>Java</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python">
+        <p>Python</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5">
+        <p>HTML5</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3">
+        <p>CSS3</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL">
+        <p>MySQL</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" alt="C">
+        <p>C</p>
+      </div>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer>
     <p>© 2025 Joanah Loraine S. Mante | All Rights Reserved</p>
   </footer>
+
+  <script>
+    // Skill hover effect
+    const skills = document.querySelectorAll('.skill-item');
+    skills.forEach(skill => {
+      skill.addEventListener('mouseenter', () => { skill.style.background = '#e9d3ff'; });
+      skill.addEventListener('mouseleave', () => { skill.style.background = '#f3e7ff'; });
+    });
+  </script>
 </body>
 </html>
