Update skills section with new tools
Added JavaScript, PHP, Git, and GitHub skills to the skills section.

--- a/about.html
+++ b/about.html
@@ -245,8 +245,8 @@
   </section>
 
   <section id="skills" class="skills">
-    <h3>~ My Favorite Tools</h3>
-    <h2>Exploring the Tools<br><span>Behind My Work</span></h2>
+    <h3>~ My Favorite Tools ~</h3>
+    <h2>Exploring the Tools <br><span>Behind My Work</span></h2>
     <div class="skills-grid">
       <div class="skill-item">
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java">
@@ -272,6 +272,24 @@
         <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/c/c-original.svg" alt="C">
         <p>C</p>
       </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript">
+        <p>JavaScript</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP">
+        <p>PHP</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git">
+        <p>Git</p>
+      </div>
+      <div class="skill-item">
+        <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+        <p>GitHub</p>
+      </div>
+    
+      </div>
     </div>
   </section>
 
@@ -289,3 +307,4 @@
   </script>
 </body>
 </html>
+
