--- a/contact.html
+++ b/contact.html
@@ -4,12 +4,359 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contact - Joanah Loraine</title>
-  <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    :root {
+      --bg-1: #f3e7ff; --bg-2: #e9d3ff; --bg-3: #f8e1ff;
+      --text-1: #2d004d; --text-2: #4a1760;
+      --accent-1: #7b2cbf; --accent-2: #c77dff; --accent-3: #a855f7;
+      --card-bg: #f8e1ff; --card-alt: #fff;
+      --header-bg: rgba(180, 150, 255, 0.4);
+      --shadow: rgba(0,0,0,0.1);
+    }
+
+    [data-theme="dark"] {
+      --bg-1: #1a0033; --bg-2: #2d004d; --bg-3: #1f0038;
+      --text-1: #e0aaff; --text-2: #c77dff;
+      --accent-1: #c77dff; --accent-2: #9d4edd; --accent-3: #d0a2f7;
+      --card-bg: #2d004d; --card-alt: #1f0038;
+      --header-bg: rgba(29, 0, 51, 0.9);
+      --shadow: rgba(199, 125, 255, 0.2);
+    }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
+    body {
+      background: linear-gradient(135deg, var(--bg-1), var(--bg-2), var(--bg-3));
+      color: var(--text-1);
+      transition: all 0.5s ease;
+      font-family: 'Poppins', sans-serif;
+      min-height: 100vh;
+    }
+
+    h1, h2, h3, h4, h5, h6 {
+      font-family: 'Playfair Display', serif;
+    }
+
+    header {
+      background: var(--header-bg);
+      transition: all 0.3s ease;
+      padding: 20px 60px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
+
+    header.scrolled {
+      padding: 12px 60px;
+      box-shadow: 0 4px 15px var(--shadow);
+    }
+
+    .logo {
+      font-size: 1.8rem;
+      font-weight: bold;
+      color: var(--accent-1);
+      font-family: 'Playfair Display', serif;
+      letter-spacing: 1px;
+    }
+
+    nav ul {
+      display: flex;
+      list-style: none;
+      gap: 30px;
+    }
+
+    nav a {
+      color: var(--text-1);
+      text-decoration: none;
+      transition: color 0.3s ease;
+      font-weight: 500;
+      font-size: 1rem;
+      letter-spacing: 0.3px;
+    }
+
+    nav a:hover,
+    nav a.active {
+      color: var(--accent-1);
+    }
+
+    .theme-toggle {
+      position: fixed;
+      top: 100px;
+      right: 30px;
+      z-index: 1001;
+      background: var(--accent-2);
+      border: none;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0 4px 15px var(--shadow);
+      transition: all 0.3s ease;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 1.5rem;
+      color: white;
+    }
+
+    .theme-toggle:hover {
+      transform: scale(1.1) rotate(15deg);
+    }
+
+    .scroll-top {
+      position: fixed;
+      bottom: 30px;
+      right: 30px;
+      background: var(--accent-2);
+      color: white;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      border: none;
+      cursor: pointer;
+      opacity: 0;
+      transform: translateY(100px);
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px var(--shadow);
+      z-index: 1001;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .scroll-top.visible {
+      opacity: 1;
+      transform: translateY(0);
+    }
+
+    .scroll-top:hover {
+      transform: translateY(-5px);
+    }
+
+    .contact-container {
+      max-width: 700px;
+      margin: 80px auto;
+      background: var(--card-bg);
+      padding: 60px;
+      border-radius: 20px;
+      box-shadow: 0 8px 30px rgba(123, 44, 191, 0.12);
+      animation: slideUp 0.8s ease-out;
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(50px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .contact-container h2 {
+      font-size: 2.8rem;
+      color: var(--text-1);
+      margin-bottom: 15px;
+      font-family: 'Playfair Display', serif;
+      font-weight: 700;
+      letter-spacing: 1px;
+    }
+
+    .contact-container p {
+      font-size: 1.1rem;
+      color: var(--text-2);
+      margin-bottom: 40px;
+      line-height: 1.8;
+      font-weight: 400;
+    }
+
+    .form-group {
+      margin-bottom: 25px;
+    }
+
+    label {
+      display: block;
+      color: var(--text-1);
+      margin-bottom: 10px;
+      font-weight: 600;
+      font-size: 1rem;
+      letter-spacing: 0.3px;
+    }
+
+    input,
+    textarea {
+      width: 100%;
+      padding: 14px 16px;
+      border: 2px solid #e9d3ff;
+      border-radius: 12px;
+      font-family: 'Poppins', sans-serif;
+      font-size: 1rem;
+      transition: all 0.3s ease;
+      color: var(--text-1);
+      background: var(--card-alt);
+    }
+
+    input:focus,
+    textarea:focus {
+      outline: none;
+      border-color: var(--accent-1);
+      box-shadow: 0 0 0 3px rgba(123, 44, 191, 0.1);
+      transform: translateY(-2px);
+    }
+
+    input::placeholder,
+    textarea::placeholder {
+      color: var(--accent-2);
+      font-weight: 400;
+    }
+
+    .btn {
+      width: 100%;
+      padding: 16px;
+      background: linear-gradient(135deg, var(--accent-1), var(--accent-2));
+      color: white;
+      border: none;
+      border-radius: 12px;
+      font-size: 1.1rem;
+      font-weight: 700;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      letter-spacing: 0.5px;
+      box-shadow: 0 4px 15px rgba(123, 44, 191, 0.3);
+      font-family: 'Poppins', sans-serif;
+    }
+
+    .btn:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 25px rgba(123, 44, 191, 0.45);
+    }
+
+    .btn:active {
+      transform: translateY(-1px);
+    }
+
+    .btn:disabled {
+      opacity: 0.7;
+      cursor: not-allowed;
+    }
+
+    .contact-info {
+      background: var(--card-alt);
+      padding: 25px;
+      border-radius: 12px;
+      margin-top: 30px;
+      border-left: 4px solid var(--accent-2);
+    }
+
+    .contact-info h3 {
+      font-size: 1.3rem;
+      color: var(--accent-1);
+      margin-bottom: 15px;
+      font-family: 'Playfair Display', serif;
+    }
+
+    .contact-info p {
+      margin-bottom: 12px;
+      font-size: 1.05rem;
+    }
+
+    .contact-info a {
+      color: var(--accent-1);
+      text-decoration: none;
+      font-weight: 600;
+      transition: color 0.3s ease;
+    }
+
+    .contact-info a:hover {
+      color: var(--accent-2);
+    }
+
+    .success-message {
+      background: #e8f5e9;
+      color: #2e7d32;
+      padding: 16px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      font-weight: 500;
+      display: none;
+      text-align: center;
+      border-left: 4px solid #2e7d32;
+    }
+
+    .success-message.show {
+      display: block;
+      animation: slideIn 0.5s ease-out;
+    }
+
+    @keyframes slideIn {
+      from {
+        opacity: 0;
+        transform: translateX(-20px);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    footer {
+      background: var(--card-bg);
+      color: var(--text-2);
+      text-align: center;
+      padding: 30px 20px;
+      margin-top: 60px;
+      font-size: 1.05rem;
+      font-weight: 500;
+    }
+
+    @media (max-width: 900px) {
+      header {
+        flex-direction: column;
+        gap: 15px;
+        padding: 15px;
+      }
+
+      nav ul {
+        flex-direction: column;
+        gap: 15px;
+      }
+
+      .contact-container {
+        margin: 60px 20px;
+        padding: 40px 25px;
+      }
+
+      .theme-toggle {
+        top: 80px;
+        right: 20px;
+      }
+    }
+  </style>
 </head>
 <body>
-  <!-- Navigation -->
-  <header>
+  <button class="theme-toggle" id="themeToggle">
+    <i class="fas fa-moon"></i>
+  </button>
+
+  <button class="scroll-top" id="scrollTop">
+    <i class="fas fa-arrow-up"></i>
+  </button>
+
+  <header id="header">
     <div class="logo">Joanah Portfolio</div>
     <nav>
       <ul>
@@ -18,40 +365,148 @@
         <li><a href="index.html#skills">Skills</a></li>
         <li><a href="index.html#portfolio">Portfolio</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
+        <li><a href="#" id="logoutBtn" style="color: var(--accent-1); font-weight: 700;">Logout</a></li>
       </ul>
     </nav>
   </header>
 
-  <!-- Contact Section -->
-  <section class="contact">
-    <h2>Contact Me</h2>
-    <!-- Pure HTML form using mailto -->
-    <form action="mailto:joanahlorainem@gmail.com" method="post" enctype="text/plain">
-      <table>
-        <tr>
-          <td><label for="name">Your Name:</label></td>
-          <td><input type="text" id="name" name="Name" placeholder="Enter your name" required></td>
-        </tr>
-        <tr>
-          <td><label for="email">Your Email:</label></td>
-          <td><input type="email" id="email" name="Email" placeholder="Enter your email" required></td>
-        </tr>
-        <tr>
-          <td><label for="message">Your Message:</label></td>
-          <td><textarea id="message" name="Message" rows="5" placeholder="Type your message"></textarea></td>
-        </tr>
-        <tr>
-          <td colspan="2" style="text-align: center;">
-            <button type="submit" class="btn">Send Message</button>
-          </td>
-        </tr>
-      </table>
+  <div class="contact-container">
+    <h2>Get In Touch</h2>
+    <p>I'd love to hear from you! Whether you have questions, collaboration ideas, or just want to say hello, feel free to reach out.</p>
+
+    <div class="success-message" id="successMsg">
+      ✓ Thank you! Your message has been received. I'll get back to you soon!
+    </div>
+
+    <form id="contactForm">
+      <div class="form-group">
+        <label for="name">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required>
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required>
+      </div>
+
+      <div class="form-group">
+        <label for="subject">Subject</label>
+        <input type="text" id="subject" name="subject" placeholder="What is this about?" required>
+      </div>
+
+      <div class="form-group">
+        <label for="message">Message</label>
+        <textarea id="message" name="message" rows="6" placeholder="Type your message here..." required></textarea>
+      </div>
+
+      <button type="submit" class="btn" id="submitBtn">
+        <i class="fas fa-paper-plane"></i> Send Message
+      </button>
     </form>
-    <p class="note"> 🌸 Just one click and I'll hear from you!</p>
-  </section>
+
+    <div class="contact-info">
+      <h3>Other Ways to Reach Me</h3>
+      <p>
+        <i class="fas fa-envelope" style="color: var(--accent-1); margin-right: 10px;"></i>
+        <a href="mailto:joanahlorainem@gmail.com">joanahlorainem@gmail.com</a>
+      </p>
+      <p>
+        <i class="fas fa-phone" style="color: var(--accent-1); margin-right: 10px;"></i>
+        <a href="tel:+639482959783">+63 948 295 9783</a>
+      </p>
+      <p>
+        <i class="fas fa-map-marker-alt" style="color: var(--accent-1); margin-right: 10px;"></i>
+        Philippines
+      </p>
+    </div>
+  </div>
 
   <footer>
     <p>© 2025 Joanah Loraine S. Mante | All Rights Reserved</p>
   </footer>
+
+  <script>
+    // Check if user is logged in
+    if (!localStorage.getItem('userLoggedIn')) {
+      window.location.href = 'login.html';
+    }
+
+    // Theme Toggle
+    const theme = document.getElementById('themeToggle');
+    const html = document.documentElement;
+    const saved = localStorage.getItem('theme') || 'light';
+    html.setAttribute('data-theme', saved);
+    theme.querySelector('i').className = saved === 'dark' ? 'fas fa-sun' : 'fas fa-moon';
+
+    theme.addEventListener('click', () => {
+      const curr = html.getAttribute('data-theme');
+      const next = curr === 'dark' ? 'light' : 'dark';
+      html.setAttribute('data-theme', next);
+      localStorage.setItem('theme', next);
+      theme.querySelector('i').className = next === 'dark' ? 'fas fa-sun' : 'fas fa-moon';
+    });
+
+    // Logout Button
+    document.getElementById('logoutBtn').addEventListener('click', (e) => {
+      e.preventDefault();
+      localStorage.removeItem('userLoggedIn');
+      window.location.href = 'login.html';
+    });
+
+    // Scroll Progress
+    window.addEventListener('scroll', () => {
+      const top = document.getElementById('scrollTop');
+      top.classList.toggle('visible', window.scrollY > 300);
+      document.getElementById('header').classList.toggle('scrolled', window.scrollY > 50);
+    });
+
+    // Scroll to Top
+    document.getElementById('scrollTop').addEventListener('click', () => {
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    });
+
+    // Form Submission
+    document.getElementById('contactForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const subject = document.getElementById('subject').value;
+      const message = document.getElementById('message').value;
+      const successMsg = document.getElementById('successMsg');
+      const submitBtn = document.getElementById('submitBtn');
+
+      // Simple validation
+      if (name && email && subject && message) {
+        // Show success message
+        successMsg.classList.add('show');
+        submitBtn.disabled = true;
+        submitBtn.innerHTML = '<i class="fas fa-check"></i> Message Sent!';
+
+        // Reset form
+        this.reset();
+
+        // Hide success message after 4 seconds
+        setTimeout(() => {
+          successMsg.classList.remove('show');
+          submitBtn.disabled = false;
+          submitBtn.innerHTML = '<i class="fas fa-paper-plane"></i> Send Message';
+        }, 4000);
+      }
+    });
+
+    // Navigation smooth scroll for anchor links
+    document.querySelectorAll('nav a').forEach(link => {
+      link.addEventListener('click', function(e) {
+        const href = this.getAttribute('href');
+        if (href.includes('index.html#')) {
+          e.preventDefault();
+          const target = href.split('#')[1];
+          // Redirect to index.html with anchor
+          window.location.href = href;
+        }
+      });
+    });
+  </script>
 </body>
 </html>
